--- a/MetaTraderConnector.csproj
+++ b/MetaTraderConnector.csproj
@@ -1,8 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="NetMQ" Version="4.0.0.239-pre" />
+    <PackageReference Include="newtonsoft.json" Version="12.0.3" />
+  </ItemGroup>
 </Project>
